# prevent-dangling-todos

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: CLAUDE.md  Dockerfile  claude-settings.json  devcontainer.json  setup-dev-environment.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
prevent_dangling_todos/: __init__.py  cli.py  prevent_todos.py
tests/: conftest.py  test_cli.py  test_end_to_end.py  test_prevent_todos.py
tests/test_data/: test_file_clean.py  test_file_no_todos.py  test_file_single_todo.py  test_file_with_violations.py
