[project]
name = "prevent_dangling_todos"
version = "1.0.0"
description = "Pre-commit hook for preventing commits with dangling TODO items without ticket references from any issue tracker"
authors = [{ name = "Gavin Medley", email = "gavin.medley@lasp.colorado.edu" }]
license = { text = "BSD-3" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["identify>=2.0.0", "pyyaml>=6.0"]

[project.scripts]
prevent-dangling-todos = "prevent_dangling_todos.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
